# bess-opt-benchmark

./: .gitignore  LICENSE  README.md  analysis.ipynb  analysis_lp.ipynb  degradation.ipynb  imbalance.ipynb  model.ipynb  pyproject.toml
benchmark/: analysis.py  mpc.py  nonlinear_model.py  optimizer.py  plots.py
data/: simulation.local.ini
data/balancing_energy_prices/: reBAP_2021.csv  reBAP_2022.csv  source.md
data/cell/: ocv.csv  rint.csv
data/converter/: source.md
data/intraday_prices/: electricity_prices_germany_2019.csv  electricity_prices_germany_2020.csv  electricity_prices_germany_2021.csv  electricity_prices_germany_2022.csv  source.md
notebooks/: balancing_energy.ipynb  efficiency.ipynb  nmc_samsung.ipynb  price_timeseries.ipynb  sinamics.ipynb
optses/: analysis.py  linear_model.py  mpc.py  nonlinear_model.py  optimizer.py  plots.py  run.py  validation_nl.ipynb
results/: simulation.ini
