[project]
name = "bess-eff-opt"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pyomo>=6.8.2",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "simses",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.uv.sources]
simses = { git = "https://gitlab.lrz.de/open-ees-ses/simses.git", rev = "bess-eff-opt" }
